fix footer spacing

--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -17,11 +17,20 @@
     text-align: left;
     font-size: 2.5rem;
     line-height: 1.2rem;
+    border-top: .0625rem solid #e0e0e0;
+    justify-content: flex-end;
 }
 
 .icons {
     display: flex;
     padding: 1rem;
     height: 100%;
-    width: 100%;
+    margin-right: .5rem;
+    color: darkgoldenrod;
+}
+
+.icons:hover {
+    transition: all .35s ease-in-out;
+    color: black;
+    cursor: pointer;
 }
